Fixed Size Icon CloseBtn On Mobile

--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -72,6 +72,11 @@
   cursor: pointer;
 }
 
+.modalCloseBtnIcon {
+  width: 100%;
+  height: 100%;
+}
+
 .modalHeader {
   display: flex;
   align-items: center;
